# linux_device_driver

./: LICENSE  README.md  cp_dtb_to_linux.sh  cp_dtb_to_nfs_root.sh  imx6ull-mmc-npi.dts  make_core.sh  make_dtb.sh  mount_nfs.sh  update-fire-kernel.sh
1_hc-sr04/: Makefile  hc-sr04_drv.c  sr04_test  sr04_test.c
2_hc-sr04_irq/: Makefile  hc-sr04_irq_drv.c  sr04_irq_test  sr04_irq_test.c  设备树节点.md
ap3216c/: Makefile  ap3216c.c  ap3216c.h  ap3216c_drv.c  ap3216c_test.c
app/: CMakeLists.txt
app/atomic_led_test/: CMakeCache.txt  CMakeLists.txt  Makefile  atomic_led_test  atomic_led_test.c  cmake_install.cmake
atomic_led_test/: Makefile  atomic_led_test.c  atomic_led_test.ko  atomic_led_test.mod.c  readme.txt
dht11_1_wire/: Makefile  dht11_drv.c  dht11_test.c
dht11_1_wire_irq/: Makefile  dht11_drv_irq.c  dht11_test_irq.c
ds18b20_1_wire/: Makefile  ds18b20_drv.c  ds18b20_test  ds18b20_test.c  设备树节点.md
export_symbol/: Makefile  export_symbol.c  export_symbol.h  module_param.c
globalfifo/: Makefile  globalfifo.c  globalfifo.ko
globalmem/: Makefile  globalmem.c  globalmem.ko
hc-sr501/: Makefile  hc_sr501_drv.c  sr501_test.c
hc-sr501-kthread/: Makefile  hc_sr501_drv_kthread.c  sr501_test  sr501_test_kthread  sr501_test_kthread.c
hellomodule/: Makefile  Makefile.save  hello_module.c
hy46xx_touch/: I2C.md  Makefile  hy46xx_ts_drv.c  hy46xx设备树.txt  设备树.md
kernel_timer_test/: .kernel_timer_test.ko.cmd  .kernel_timer_test.mod.o.cmd  .kernel_timer_test.o.cmd  Makefile  copy_ko_to_nfs_fs.sh  kernel_timer_app  kernel_timer_app.c  kernel_timer_test.c  (+3 more)
(+105 files in other folders)
